force-app/main/default/objects/Policy_Exception__c/Policy_Exception__c.object-meta.xml
<CustomObject>
    <label>Policy Exception</label>
    <nameField>
        <label>Policy Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>