force-app/main/default/objects/Policy_Exception__c/fields/Loan_Manager__c.field-meta.xml
<CustomField>
    <fullName>Loan_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Policy_Exceptions1</relationshipName>
    <type>Lookup</type>
</CustomField>