force-app/main/default/objects/Policy_Exception__c/fields/Originator__c.field-meta.xml
<CustomField>
    <fullName>Originator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Policy_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>