force-app/main/default/objects/Policy_Exception__c/fields/Policy_Exception_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Policy_Exception_Narrative__c</fullName>
    <label>Policy Exception Narrative</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>