force-app/main/default/objects/Policy_Exception__c/recordTypes/Post_Close_Appraisal.recordType-meta.xml
<RecordType>
    <fullName>Post_Close_Appraisal</fullName>
    <active>true</active>
    <label>Post-Close Appraisal</label>
</RecordType>