force-app/main/default/objects/Policy_Exception__c/validationRules/Require_Property_for_Post_Close_Appraisa.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Property_for_Post_Close_Appraisa</fullName>
    <active>true</active>
    <description>This will require the User select a Property for a Post Close Appraisal Exception</description>
    <errorConditionFormula>AND(
 ISBLANK( Property__c ) ,
 INCLUDES( Exception_Type__c , &apos;Post-Close Appraisal&apos;) 
)</errorConditionFormula>
    <errorDisplayField>Property__c</errorDisplayField>
    <errorMessage>Property is required for a Post Close Appraisal Exception</errorMessage>
</ValidationRule>